[package]
name = "warp-dcl-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
dcl-rpc = "1.0.0"
futures-util = "0.3.27"
prost = "0.11.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
tokio-tungstenite = "0.18.0"

[build-dependencies]
prost-build = "0.11.8"
dcl-rpc = "1.0.0"
